<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">cjdns</string>

    <!-- cjdns service -->
    <string name="cjdns_service_notification_title">@string/app_name</string>
    <string name="cjdns_service_notification_text">Node %1$s running</string>
    <string name="cjdns_service_notification_text_missing_address">Node address is missing</string>

    <!-- Drawer -->
    <string name="drawer_open_content_desc">Open drawer</string>
    <string name="drawer_close_content_desc">Close drawer</string>

    <string name="drawer_option_me">Me</string>
    <string name="drawer_option_peers">Peers</string>
    <string name="drawer_option_credentials">Credentials</string>
    <string name="drawer_option_settings">Settings</string>
    <string name="drawer_option_about">About</string>

    <string-array name="drawer_options">
        <item>@string/drawer_option_me</item>
        <item>@string/drawer_option_peers</item>
        <item>@string/drawer_option_credentials</item>
        <item>@string/drawer_option_settings</item>
        <item>@string/drawer_option_about</item>
    </string-array>

    <!-- Me page -->
    <string name="me_page_name_icon">{fa-user}</string>
    <string name="me_page_address_icon">{fa-home}</string>
    <string name="me_page_public_key_icon">{fa-lock}</string>

    <!-- Settings page -->
    <string name="setting_verbose_enabled_key" translatable="false">setting_verbose_enabled_key</string>
    <string name="setting_encrypt_enabled_key" translatable="false">setting_encrypt_enabled_key</string>
    <string name="setting_reset_identity_key" translatable="false">setting_reset_identity_key</string>
    <string name="setting_send_apk_key" translatable="false">setting_send_apk_key</string>
    <string name="setting_link_wifi_direct_key" translatable="false">setting_link_wifi_direct_key</string>
    <string name="setting_link_bluetooth_key" translatable="false">setting_link_bluetooth_key</string>
    <string name="setting_link_overlay_key" translatable="false">setting_link_overlay_key</string>

    <string name="settings_page_category_general_title">General</string>
    <string name="settings_page_setting_verbose_title">Verbose Mode</string>
    <string name="settings_page_setting_verbose_summary_on">Display detailed node information</string>
    <string name="settings_page_setting_verbose_summary_off">Display minimal node information</string>
    <string name="settings_page_setting_encrypt_title">Data Encryption</string>
    <string name="settings_page_setting_encrypt_summary_enabled">Enabled</string>
    <string name="settings_page_setting_encrypt_summary_disabled">Configure device storage encryption</string>
    <string name="settings_page_setting_encrypt_summary_unsupported">Not supported</string>
    <string name="settings_page_setting_reset_identity_title">Reset Identity</string>
    <string name="settings_page_setting_reset_identity_summary">Wipe IPv6 of this node</string>
    <string name="settings_page_setting_send_apk_title">Share Application</string>
    <string name="settings_page_setting_send_apk_summary">Send APK to another device</string>

    <string name="settings_page_category_connectivity_title">Connectivity</string>
    <string name="settings_page_setting_link_summary_on">On</string>
    <string name="settings_page_setting_link_summary_off">Off</string>
    <string name="settings_page_setting_link_wifi_direct_title">@string/link_wifi_direct</string>
    <string name="settings_page_setting_link_bluetooth_title">@string/link_bluetooth</string>
    <string name="settings_page_setting_link_overlay_title">@string/link_overlay</string>

    <!-- Peer card -->
    <string name="peer_card_address_icon">{fa-home}</string>
    <string name="peer_card_public_key_icon">{fa-lock}</string>
    <string name="peer_card_connections_button">{fa-plug}</string>

    <!-- Credential card -->
    <string name="credential_card_protocol_icon">{fa-exchange}</string>
    <string name="credential_card_password_icon">{fa-key}</string>
    <string name="credential_card_allow_button_on">{fa-toggle-on}</string>
    <string name="credential_card_allow_button_off">{fa-toggle-off}</string>
    <string name="credential_card_target_button">{fa-street-view}</string>
    <string name="credential_card_broadcast_button">{fa-rss}</string>

    <!-- Outgoing connections -->
    <string name="connections_list_title">Outgoing Connections</string>
    <string name="connections_list_item_protocol">{fa-exchange}&#160;&#160;&#160;%s</string>
    <string name="connections_list_item_password">{fa-key}&#160;&#160;&#160;%s</string>
    <string name="connections_list_item_delete">{fa-remove}</string>

    <!-- Protocol -->
    <string name="protocol_description" formatted="false">%s via %s</string>
    <string name="interface_udp">UDP</string>
    <string name="interface_eth">ETH</string>
    <string name="link_wifi_direct">WiFi Direct</string>
    <string name="link_bluetooth">Bluetooth</string>
    <string name="link_overlay">Clearnet Overlay</string>

    <!-- Exchange medium -->
    <string name="exchange_medium_nfc">{fa-tag}&#160;&#160;&#160;NFC</string>
    <string name="exchange_medium_qrcode">{fa-qrcode}&#160;&#160;&#160;QR code</string>
    <string name="exchange_medium_clipboard">{fa-clipboard}&#160;&#160;&#160;Copy to clipboard</string>
    <string name="exchange_medium_share">{fa-share-alt}&#160;&#160;&#160;Share…</string>

    <!-- Credential target share -->
    <string name="credential_target_share_title">Send via</string>

    <string-array name="credential_target_share_exchange_options">
        <item>@string/exchange_medium_nfc</item>
        <item>@string/exchange_medium_qrcode</item>
        <item>@string/exchange_medium_clipboard</item>
        <item>@string/exchange_medium_share</item>
    </string-array>

    <!-- Credential broadcast share -->
    <string name="credential_broadcast_share_title">Unencrypted Broadcast via</string>

    <string name="version">Version</string>
    <string name="small_info">Android app for mesh networking with cjdns</string>
    <string name="license1">Copyright © 2015 Benedict Lau, Lars Gierth and Other Contributors</string>
    <string name="license2">Distributed under the GNU GPL v3</string>
    <string name="license3">Source code is available at https://github.com/hyperboria/android</string>
    <string name="large_info">MeshNet is an Android app that lets you connect to cjdns networks, without the need for a rooted phone — thanks to the android.net.VpnService API introduced with Android 4.0 (Ice Cream Sandwich). Older versions still require root.</string>

    <string-array name="credential_broadcast_share_exchange_options">
        <item>@string/exchange_medium_nfc</item>
        <item>@string/exchange_medium_qrcode</item>
    </string-array>

</resources>
