<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_page_category_general_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/setting_verbose_enabled_key"
            android:summaryOff="@string/settings_page_setting_verbose_summary_off"
            android:summaryOn="@string/settings_page_setting_verbose_summary_on"
            android:title="@string/settings_page_setting_verbose_title" />
        <Preference
            android:enabled="false"
            android:key="@string/setting_encrypt_enabled_key"
            android:title="@string/settings_page_setting_encrypt_title" />
        <Preference
            android:key="@string/setting_send_apk_key"
            android:summary="@string/settings_page_setting_send_apk_summary"
            android:title="@string/settings_page_setting_send_apk_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_page_category_connectivity_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/setting_link_wifi_direct_key"
            android:summaryOff="@string/settings_page_setting_link_summary_off"
            android:summaryOn="@string/settings_page_setting_link_summary_on"
            android:title="@string/settings_page_setting_link_wifi_direct_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/setting_link_bluetooth_key"
            android:summaryOff="@string/settings_page_setting_link_summary_off"
            android:summaryOn="@string/settings_page_setting_link_summary_on"
            android:title="@string/settings_page_setting_link_bluetooth_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/setting_link_overlay_key"
            android:summaryOff="@string/settings_page_setting_link_summary_off"
            android:summaryOn="@string/settings_page_setting_link_summary_on"
            android:title="@string/settings_page_setting_link_overlay_title" />
    </PreferenceCategory>
</PreferenceScreen>