<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView"
                android:gravity="center"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="5dp" />

            <TextView
                android:id="@+id/small_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/version"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/small_info"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/large_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/large_info"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/small_info"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="32dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <TextView
                android:id="@+id/ln1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/large_info"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/license3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <TextView
                android:id="@+id/ln2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/ln1"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingTop="80dp"
                android:text="@string/license1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ln3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/ln2"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:padding="8dp"
                android:text="@string/license2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>