<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/global_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:text="@string/me_page_name_icon"
            style="@style/MyText.Small.Icon" />

        <TextView
            android:id="@+id/me_page_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:ellipsize="none"
            style="@style/MyText.Small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:text="@string/me_page_address_icon"
            style="@style/MyText.Small.Icon" />

        <TextView
            android:id="@+id/me_page_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:ellipsize="none"
            style="@style/MyText.Small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/me_page_public_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:text="@string/me_page_public_key_icon"
            style="@style/MyText.Small.Icon" />

        <TextView
            android:id="@+id/me_page_public_key_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:ellipsize="none"
            style="@style/MyText.Small" />
    </LinearLayout>

</LinearLayout>